--- a/TouchTrackingPrototype4/TouchTrackingPrototype3/TouchTrackingPrototype3/TouchTrackerPage.xaml
+++ b/TouchTrackingPrototype4/TouchTrackingPrototype3/TouchTrackingPrototype3/TouchTrackerPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pe="clr-namespace:TouchTrackingPlatformEffects"
              xmlns:pages="clr-namespace:TouchTrackingPrototype3"
-             x:Class="TouchTrackingPrototype3.MainPage">
+             x:Class="TouchTrackingPrototype3.TouchTrackerPage">
 
     <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
         <Grid>
@@ -13,9 +13,13 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Label Text="MainPage: Click button to start tracking..." FontSize="Title" TextColor="White" Padding="30,10,30,10" Grid.Row="0"/>
+            <Label Text="TouchTrackerPage: Click button when done tracking..." FontSize="Title" TextColor="White" Padding="30,10,30,10" Grid.Row="0"/>
 
-            <Button Text="Click to track..." Clicked="TrackButton_Clicked" Grid.Row="1"/>
+            <Button Text="Click when done..." Clicked="DoneButton_Clicked" Grid.Row="1"/>
+
+            <Grid.Effects>
+                <pe:TouchTrackingEffect />
+            </Grid.Effects>
         </Grid>
     </Frame>
 </ContentPage>
