--- a/TouchTrackingPrototype8/TouchTrackingPrototype3/TouchTrackingPrototype3/MainPage.xaml
+++ b/TouchTrackingPrototype8/TouchTrackingPrototype3/TouchTrackingPrototype3/MainPage.xaml
@@ -5,7 +5,7 @@
              xmlns:pages="clr-namespace:TouchTrackingPrototype3"
              x:Class="TouchTrackingPrototype3.MainPage">
 
-    <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
+    <Frame BackgroundColor="White" Padding="24" CornerRadius="0">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -14,9 +14,11 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Label Text="MainPage: Click button to track..." FontSize="Title" TextColor="White" Padding="30,10,30,10" Grid.Row="0"/>
+            <Label Text="MainPage: Click button to track..." FontSize="Title" TextColor="DarkBlue" Padding="30,10,30,10" Grid.Row="0"/>
 
             <Button Text="Click to track..." Clicked="TrackButton_Clicked" Grid.Row="1"/>
+
+            <Image Source="n4klogo.jpg" Grid.Row="3"></Image>
         </Grid>
     </Frame>
 </ContentPage>
